[project]
name = "p3-ir-camera"
version = "0.1.0"
description = "Python driver and viewer for P3-series USB thermal cameras"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Joshua V. Dillon" },
]
keywords = ["thermal", "infrared", "camera", "usb", "p3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pyusb>=1.2",
    "pyserial>=3.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.10",
    "pytest>=7.0",
    "ruff>=0.8",
]

[project.urls]
Repository = "https://github.com/jvdillon/p3-ir-camera"

[project.scripts]
p3-viewer = "p3_viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["p3_camera.py", "p3_viewer.py"]

[tool.ruff]
fix = true
show-fixes = true
line-length = 88
output-format = "concise"
target-version = "py310"
exclude = [".venv", "*.egg-info", ".pytest_cache", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true
default-section = "third-party"
detect-same-package = true
force-single-line = false
force-sort-within-sections = false
from-first = true
lines-between-types = 1
lines-after-imports = 2
no-lines-before = ["future"]
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.basedpyright]
typeCheckingMode = "standard"
exclude = [".venv", "*.egg-info", ".pytest_cache", "build", "dist"]
ignore = [".venv", "*.egg-info", ".pytest_cache", "build", "dist"]
stubPath = ".typings"
pythonPlatform = "Linux"
pythonVersion = "3.10"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
addopts = "-Werror"
norecursedirs = [".venv", "__pycache__", "*.egg-info"]
